--- a/PiniT/PiniT.csproj
+++ b/PiniT/PiniT.csproj
@@ -217,6 +217,10 @@
     <Compile Include="Migrations\201907232003456_required fields.Designer.cs">
       <DependentUpon>201907232003456_required fields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201907251147489_reservation_comment.cs" />
+    <Compile Include="Migrations\201907251147489_reservation_comment.Designer.cs">
+      <DependentUpon>201907251147489_reservation_comment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -365,6 +369,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201907232003456_required fields.resx">
       <DependentUpon>201907232003456_required fields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907251147489_reservation_comment.resx">
+      <DependentUpon>201907251147489_reservation_comment.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
