--- a/PiniT/PiniT.csproj
+++ b/PiniT/PiniT.csproj
@@ -270,7 +270,14 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\about.jpg" />
+    <Content Include="Content\Images\aboutc.png" />
+    <Content Include="Content\Images\background.jpg" />
+    <Content Include="Content\Images\backrfw.jpg" />
+    <Content Include="Content\Images\patern.png" />
     <Content Include="Content\Images\pexels-photo-1640777.jpeg" />
+    <Content Include="Content\Images\sush.jpg" />
+    <Content Include="Content\Images\table.jpg" />
     <Content Include="Content\Images\usreIndex.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
