--- a/PiniT/PiniT.csproj
+++ b/PiniT/PiniT.csproj
@@ -270,6 +270,8 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\icons.png" />
+    <Content Include="Content\Images\iconsm.png" />
     <Content Include="Content\Images\images %281%29.png" />
     <Content Include="Content\Images\images.jfif" />
     <Content Include="Content\Images\images.png" />
