--- a/PiniT/PiniT.csproj
+++ b/PiniT/PiniT.csproj
@@ -259,6 +259,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AccountWalletsVM.cs" />
+    <Compile Include="ViewModels\HomeIndexVM.cs" />
     <Compile Include="ViewModels\ProductsVM.cs" />
     <Compile Include="ViewModels\ReservationsVM.cs" />
     <Compile Include="ViewModels\RestaurantsVM.cs" />
