--- a/PiniT/PiniT.csproj
+++ b/PiniT/PiniT.csproj
@@ -275,6 +275,9 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\banera.jpg" />
+    <Content Include="Content\Images\banerb.jpg" />
+    <Content Include="Content\Images\bannerafi.jpg" />
     <Content Include="Content\Images\icons.png" />
     <Content Include="Content\Images\iconsm.png" />
     <Content Include="Content\Images\images %281%29.png" />
