--- a/PiniT/PiniT.csproj
+++ b/PiniT/PiniT.csproj
@@ -281,6 +281,7 @@
     <Content Include="Content\Images\beijing.jpg" />
     <Content Include="Content\Images\bellaMafia.jpg" />
     <Content Include="Content\Images\bellaMafia2.jpg" />
+    <Content Include="Content\Images\burger.jpg" />
     <Content Include="Content\Images\fb.png" />
     <Content Include="Content\Images\GodBless1.jpg" />
     <Content Include="Content\Images\GodBless2.jpg" />
